Make theme btn more consistent on mobile; Fix flow of a project desc.

--- a/src/styles/ToggleThemeButton.module.css
+++ b/src/styles/ToggleThemeButton.module.css
@@ -2,6 +2,7 @@
     height: 100%;
     width: 50%;
     border: none;
+    outline: none;
     border-left: 1px solid var(--color-accent);
     background-color: var(--color-accent-2);
     color: #FFFFFF;
@@ -17,7 +18,6 @@
 @media screen and (max-width: 800px) {
     .toggleThemeButton {
         border: none;
-        border-top: 1px solid var(--color-accent);
         width: 100%;
     }
 }
